...
                    <view key="view" contentMode="scaleToFill" id="3YX-Hf-LdM">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TKI-85-nMl">
                                <rect key="frame" x="190" y="470" width="221" height="30"/>
                                <state key="normal" title="SecondCollectionViewController"/>
                                <connections>
                                    <action selector="tappedSecondCollectionView" destination="TZ9-z3-pOi" eventType="touchUpInside" id="JJd-qW-jxH"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bcW-bY-9kI">
                                <rect key="frame" x="206" y="420" width="189" height="30"/>
                                <state key="normal" title="SecondTableViewController"/>
                                <connections>
                                    <segue destination="xXW-6J-t1O" kind="show" identifier="ShowSecondTable" id="2EB-7P-GRv"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
