...
            <point key="canvasLocation" x="1626.5" y="-98"/>
        </scene>
        <!--Item-->
        <scene sceneID="We2-rQ-ubg">
            <objects>
                <navigationController storyboardIdentifier="Nav1" id="892-wE-B3c" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="qYf-VT-GUo"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="pl8-Xk-ryi">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="wv0-Xq-KW4" kind="relationship" relationship="rootViewController" id="8jS-3T-pZJ"/>
...
